# ac-library-python

./: .gitignore  README.ja.md  README.md  README_ja.md  asv.conf.json  requirements.txt  setup.cfg
.github/workflows/: benchmarks.yml  lint-36.yml  lint.yml  python-package-36.yml  python-package.yml  test-36.yml  test.yml
atcoder/: __init__.py  __main__.py  _bit.py  _math.py  _queue.py  _scc.py  convolution.py  dsu.py  fenwicktree.py  lazysegtree.py  math.py  maxflow.py  mincostflow.py  modint.py  scc.py  segtree.py  string.py  twosat.py
benchmarks/: benchmark_dsu.py
docs/: Makefile  conf.py  convolution.rst  dsu.rst  fenwicktree.rst  index.rst  lazysegtree.rst  math.rst  maxflow.rst  mincostflow.rst  modint.rst  scc.rst  segtree.rst  string.rst  twosat.rst
docs/_templates/autosummary/: class.rst
example/: convolution_practice.py  convolution_practice_int.py  dsu_practice.py  fenwick_practice.py  floor_sum_practice.py  lazysegtree_practice_k.py  lazysegtree_practice_k_wo_modint.py  lazysegtree_practice_l.py  maxflow_practice.py  mincostflow_practice.py  sa_practice.py  scc_practice.py  segtree_practice.py  segtree_practice_reversed.py  twosat_practice.py
tests/: conftest.py  test__bit.py  test_dsu.py  test_fenwicktree.py  test_internal_math.py  test_math.py
tests/example_tests/: test_examples.py  util.py
tests/example_tests/input/: D1_out.txt  G1_out.txt
