[metadata]
name = ac-library-python
version = attr: atcoder.__version__
description = Python port of AtCoder Library (ACL).
license = CC0

[options]
packages = find:

[options.extras_require]
lint =
    flake8
    pep8-naming; python_version>="3.8"
    mypy
test =
    pytest
docs =
    sphinx
    sphinx_rtd_theme
benchmark =
    asv
    virtualenv

[options.packages.find]
include = atcoder*

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True
